--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,9 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+# ignore ALL .log files
+*.log
+
+# ignore ALL files in ANY directory named _site
+_site/
